# agenda-cultural

./: .gitignore  Makefile  README.md  debug_scrapers.py  docker-compose.yml  init_db.py  main.py  pyproject.toml  run_scraper.py  rxconfig.py  tasks.py
.github/: pytest.yml  ruff.yml  sonarqube.yml
.github/workflows/: deploy.yml  ruff.yml  scraper.yml  tests.yml
agenda_cultural/: agenda_cultural.py  cultural_centers.py  models.py  scheduler.py  setup_db.py  state.py  styles.py
agenda_cultural/backend/: __init__.py  app_initializer.py  config.py  constants.py  log_config.py  logger.py  models.py  scraping_orchestrator.py
agenda_cultural/backend/scrapers/: __init__.py  base_scraper.py
agenda_cultural/backend/scrapers/alianza_francesa/: __init__.py  scraper.py
agenda_cultural/backend/scrapers/apj/: scraper.py
agenda_cultural/backend/scrapers/bnp/: __init__.py  scraper.py
agenda_cultural/backend/scrapers/ccpucp/: __init__.py  scraper.py
agenda_cultural/backend/services/: __init__.py  database_service.py  scraper_service.py  tmdb_service.py
agenda_cultural/components/: movie_components.py
agenda_cultural/frontend/components/: __init__.py  movie_card.py  movie_components.py  navbar.py  views.py
agenda_cultural/frontend/pages/: __init__.py  about.py  home.py
agenda_cultural/frontend/state/: movie_state.py
agenda_cultural/pages/: home.py
agenda_cultural/shared/: __init__.py  cultural_centers.py
agenda_cultural/state/: state.py
agenda_cultural/states/: alianza_francesa_state.py  bnp_state.py  ccpucp_state.py  movie_loader.py  state_orchestrator.py
agenda_cultural/states/alianza_francesa/: scraper.py  state.py
agenda_cultural/states/bnp/: scraper.py  state.py
agenda_cultural/states/ccpucp/: scraper.py  state.py
agenda_cultural/states/scrapers/: alianza_francesa.py
alembic/versions/: 0d5fde276915_.py  0ff864c7d733_.py  28ec3c2ca8f6_add_source_url.py  4d53a1ac5dc0_add_poster_url_to_movie.py  91567e95cda0_rename_table.py  afe0e8459f07_init.py
scripts/: DEBUG_GUIDE.md  debug_runner.py
tests/: conftest.py  test_state.py
tests/backend/scrapers/: test_base_scraper.py
tests/backend/services/: test_database_service.py  test_tmdb_service.py
tests/scrapers/: test_base_scraper.py  test_bnp_scraper.py
(+4 files in other folders)
