[project]
name = "agenda-cultural"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "apscheduler>=3.11.1",
  "httpx>=0.28.1",
  "playwright>=1.56.0",
  "psycopg2-binary>=2.9.11",
  "pytest-mock>=3.15.1",
  "python-dotenv>=1.2.1",
  "reflex>=0.8.21",
  "respx>=0.22.0",
  "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
  "debugpy>=1.8.17",
  "freezegun>=1.5.5",
  "pytest>=9.0.1",
  "pytest-asyncio>=1.3.0",
  "pytest-coverage>=0.0",
  "ruff>=0.14.7",
  "ty>=0.0.4",
]

[tool.ruff.lint.per-file-ignores]
"agenda_cultural.py" = ["F401"] # Tu archivo principal
"**/models/*.py" = ["F401"]     # Archivos de modelos (por side effects)

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
